<resources>
    <string name="app_name">拍拍乐</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="share_wechatmoments">朋友圈</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_weibo">新浪微博</string>

    <string name="title_ar">AR认知</string>
    <string name="title_thesaurus">词库</string>
    <string name="title_rateoflearning">学习进度</string>
    <string name="title_setting">设置</string>
    <string name="title_test">测试</string>
    <string name="feedback">意见反馈</string>
    <string name="title_communication">交流与联系</string>
    <string name="title_share_app">分享应用</string>
    <string name="title_goto_rank">去评分</string>

    <string name="account">用户名／邮箱</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="re_password">确认密码</string>
    <string name="login">登录</string>
    <string name="register_account">注册账号</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_password">密码长度至少6位</string>
    <string name="error_same_password">密码不一致</string>
    <string name="error_field_required">必填项</string>
    <string name="login_fail">登录失败，请仔细检查账号密码</string>
    <string name="already_email">此邮箱已注册</string>
    <string name="already_username">此用户名已注册</string>
    <string name="no_username">用户名不存在</string>
    <string name="error_password">密码错误</string>
    <string name="reset_password">重置密码</string>
    <string name="userinfo_overdue">用户信息过期，请重新登录</string>
    <string name="logout">退出当前帐号</string>
    <string name="submit">提交</string>
    <string name="error_head_replace">头像上传失败</string>
    <string name="share_app_text">推荐下载“拍拍乐”手机客户端，提供高质量的英语学习体验，以新颖独特的AR交互模式提升学习兴趣。http://shothappy.bmob.site</string>
    <string name="pronunciation">发音</string>
    <string name="change_password">修改密码</string>
    <string name="error_network">网络错误</string>
    <string name="about">关于拍拍乐</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="in_oldpassword">请输入旧密码</string>
    <string name="in_newpassword">请输入新密码</string>
    <string name="success_changepassword">密码修改成功，可以用新密码进行登录啦</string>
    <string name="fail_changepassword">密码修改失败，请仔细检查原密码是否填写正确</string>
    <string name="feedback_content_hint">请详细描述你的问题</string>
    <string name="in_feedback_content">请输入反馈内容</string>
    <string name="success_feedback">你的反馈已提交，我们将尽快处理</string>
    <string name="animals_dictionary">动物</string>
    <string name="fruits_dictionary">水果</string>
    <string name="vegetables_dictionary">蔬菜</string>
    <string name="word">单词</string>
    <string name="system_error">系统错误</string>
    <string name="wordfinished">单词已经全部加载完了</string>
    <string name="animals">animals</string>
    <string name="fruits">fruits</string>
    <string name="vegetables">vegetables</string>
    <string name="share_activity_text">我在用“拍拍乐”学习英语，有趣好玩的AR交互模式，你还在等什么，快来体验吧！</string>
    <string name="URL">http://shothappy.bmob.site</string>
    <string name="refresh">刷新</string>
    <string name="today_tip">请完成今日任务(至少学习10单词)</string>
    <string name="reward_tip">今日奖励还未出炉，请稍候再试</string>
    <string name="game_to">获得游戏资格啦，快去玩吧</string>
    <string name="choice_tip">选择一个你认为正确的答案</string>
    <string name="game_tip">通过10道测试题才能玩游戏哦</string>
    <string name="unlock_today_card">&#160;&#160;~卡片已解锁~\n快去观看动画吧</string>
</resources>
