<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:checked="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_ar" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_thesaurus" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_rateoflearning" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_setting" />
    </group>

    <item android:title="@string/title_communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_share_app" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_goto_rank" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_delete"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
