<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_background"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/default_head" />

        <TextView
            android:id="@+id/username_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/account"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


    <TextView
        android:id="@+id/pronunciation"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:background="@drawable/setting_text_background"
        android:text="@string/pronunciation"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/change_password"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:background="@drawable/setting_text_background"
        android:text="@string/change_password"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:background="@drawable/setting_text_background"
        android:text="@string/feedback"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/about"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/setting_text_background"
        android:text="@string/about"
        android:textColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/logout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/exit" />

</RelativeLayout>
